mostly typos and two graphs

--- a/dataclean.tex
+++ b/dataclean.tex
@@ -34,7 +34,7 @@ Fig.~\ref{fig:dataraw}). To focus our analysis on data after the first
 two rework cycles in the break-in period, we first reduce the data to
 the GPUs that were installed shortly before 2014 started. This was
 done by removing data for any units with a {\em remove} date before
-2014. After this reduction, there were stil six older units remaining,
+2014. After this reduction, there were still six older units remaining,
 which we also removed to have a clean set of units for the
 analysis. We do some further processing to handle time overlaps in a
 tiny fraction (under 0.0007 in GPU life and 0.0002 in location life)
