--- a/dataprep.tex
+++ b/dataprep.tex
@@ -87,7 +87,7 @@ The first GPU record
 shows installation in locations {\tt c17-4c1s3n1}, {\tt c21-1c2s5n0},
 {\tt c0-1c1s3n3}, with periods off the system, and finally in {\tt
   c13-1c1s3n3}, where it stays until August 1, 2017, after which it is
-not seen again. The second is intalled in location {\tt c18-4c1s5n1},
+not seen again. The second is installed in location {\tt c18-4c1s5n1},
 where it stays until the last data collection date on March 3, 2019,
 at 3:19:11 AM. The third GPU is first installed in locations {\tt
   c5-4c0s7n0}, {\tt c3-3c1s5n0}, {\tt c0-6c1s7n2}, and {\tt
