--- a/discussion.tex
+++ b/discussion.tex
@@ -55,7 +55,7 @@ network of Titan's successor, Summit~\cite{olcf:summit}. Nodes associated with
 the same job need to be close to each other on the network for maximum
 application performance. Also, node outages or less reliable nodes within a
 tight group of reliable nodes create resource allocation
-holes. Saparating two lower nodes in each cage 0 on Titan would not
+holes. Separating two lower nodes in each cage 0 on Titan would not
 create a contiguous partition, yet this group would be the most
 reliable in 2016 as was shown in the preceeding section.
 %
