--- a/survival.tex
+++ b/survival.tex
@@ -161,7 +161,7 @@ location-dependent.
 
 Our interpretation of correlation with details of the cooling system
 comes mostly from the hazard ratios for the old batch. The new batch
-has mot had many failure events and the uncertainty bars of nearly all
+has not had many failure events and the uncertainty bars of nearly all
 ratios include 1, which is no difference. In the old batch, we see
 that {\em cage} has the strongest effect, putting the highest hazard
 ratio on cage 2, which is consistent with lowest survivals in the KM
