--- a/tbf.tex
+++ b/tbf.tex
@@ -158,7 +158,7 @@ The new partition of the machine has a 12X better MTBF than the older
 partition.
 
 For example, in 2018-Q4, the old partition MTBF is about 7.9 hours,
-whereas the newer partitio is 96 hours (4 days). The implications of such a huge disparity on applications running on the 
+whereas the newer partition is 96 hours (4 days). The implications of such a huge disparity on applications running on the 
 system are discussed in
 Section~\ref{section:discussion}. Moreover, while the old partition is
 smaller than the new partition, the old partition drives the overall reliability of
