--- a/intro.tex
+++ b/intro.tex
@@ -67,15 +67,15 @@ it for reliability and survival analysis research and go beyond the
 results presented here.
 
 We begin by describing related work in Sec.~\ref{section:related}. Our
-data collection is desctibed in Sec.~\ref{section:dataprep} and the
+data collection is described in Sec.~\ref{section:dataprep} and the
 data cleaning, checking, and lifetime summarization process in
 Sec.~\ref{section:dataclean}. A time between failures (TBF) analysis
 is given in Sec.~\ref{section:tbf}. Survival analysis based on
 Kaplan-Meier modeling (KM) and Cox regression modeling (CR) of
 relative hazard rates in various locations are in
 Sec.~\ref{section:survival}. The goals of a TBF analysis and of
-survival analysis (SA) are different: TBF studies largely how GPU
-reliability affects the machine, wheras SA studies largely how the
+survival analysis (SA) are different: TBF studies largely show GPU
+reliability affects the machine, whereas SA studies largely how the
 machine affects GPU reliability.  Finally, we discuss our main
 conclusions and recommendations in Sec.~\ref{section:discussion}.
  
