--- a/related.tex
+++ b/related.tex
@@ -13,7 +13,7 @@ Tiwari et al~\cite{10.1145/2807591.2807666} further analyze types of GPU errors 
 %
 Nie et al.~\cite{7446091,nie17characterizing,nie18machine} characterize the soft error behavior of Titan's GPUs in relation to temperature and power consumption to predict their increased occurrence by correlating data in temporal and spatial domains and using machine learning models. The work primarily focuses on correctable single-bit errors.
 %
-Tiwari et al. and Nie et al. d0 not address the atypical failure mode discussed in this paper. They also only use Titan error and failure data from June 2013 to February 2015, excluding early failures and the failure mode discussed in this paper (which occurred after February 2015).
+Tiwari et al. and Nie et al. do not address the atypical failure mode discussed in this paper. They also only use Titan error and failure data from June 2013 to February 2015, excluding early failures and the failure mode discussed in this paper (which occurred after February 2015).
 
 Zimmer et al.~\cite{8665764} develop a new job scheduling strategy for Titan to counter the GPU failures that we discuss and to improve system utilization and productivity. The solution uses reordering of the compute nodes for resource allocation, scheduling larger jobs on more reliable and smaller jobs on less reliable nodes.
 
@@ -35,5 +35,5 @@ Both approaches, Bautista-Gomez et al. and Tiwari et al., aim at dealing with th
 
 Other work in characterizing supercomputer faults, errors and failures focuses on the various other systems deployed around the world, primarily at US Department of Energy laboratories.
 %
-Di et al.~\cite{8809553} develop an in-depth understanding of failure characteristics of the IBM Blue Gene/Q Mira system at Argonne National Laboratory. This work shows that 99.4\% of job failures are due to user behavior, such as errors in the code or misconfiguration. Martino et al.~\cite{6903615} characterize the errors and failures of the Blue Waters Cray XE6/XK7 system at the National Center for Supercomputing Applications (NCSA), at the University of Illinois at Urbana-Champaign. The results show that 74.4\% of system-wide outages in Blue Waters were caused by software. Blue Waters's XK7 partition had the same architecture as Titan, but did not experience the same GPU failure mode detailed in this paper.
+Di et al.~\cite{8809553} develop an in-depth understanding of failure characteristics of the IBM Blue Gene/Q Mira system at Argonne National Laboratory. This work shows that 99.4\% of job failures are due to user behavior, such as errors in the code or misconfiguration. Martino et al.~\cite{6903615} characterize the errors and failures of the Blue Waters Cray XE6/XK7 system at the National Center for Supercomputing Applications, at the University of Illinois at Urbana-Champaign. The results show that 74.4\% of system-wide outages in Blue Waters were caused by software. Blue Waters's XK7 partition had the same architecture as Titan, but did not experience the same GPU failure mode detailed in this paper.
 % Interesting ... do we know why?
