added revews and Makefile entry

--- a/intro.tex
+++ b/intro.tex
@@ -25,10 +25,13 @@ and contains the most reliable data on GPU operation.
 \begin{figure*}[tb]
   \centering
   \includegraphics[width=\textwidth]{figs/chronology001.pdf}
-  \caption{Volume of GPU swaps detected on Titan at inventories. Our
-    analysis begins with units in place by 2014. A break-in period
-    before 2014 involved working out mechanical assembly issues at
-    PCIe connectors.}
+  \caption{Volume of GPU swaps detected on Titan at individual
+    inventories (narrow blue) and yealy sum totals for 2014 and later
+    (wide gray). High swap volumes prior to 2014 reflect two major
+    rework cycles on mechanical assembly issues at PCIe connectors
+    that can be characterized as a break-in period. Our analysis in
+    this paper excludes the break-in period and is focused on units in
+    place by 2014 or swapped in during the years that follow.} 
   \label{fig:chronology}
 \end{figure*}
 Figure~\ref{fig:chronology} illustrates the chronology of the rework
