--- a/intro.tex
+++ b/intro.tex
@@ -25,18 +25,20 @@ and contains the most reliable data on GPU operation.
 \begin{figure*}[tb]
   \centering
   \includegraphics[width=\textwidth]{figs/chronology001.pdf}
-  \caption{Volume of GPU swaps detected on Titan at individual
+  \caption{A seven-year tale of GPU life on a leadership class
+    supercomputer: Volume of GPU swaps detected on Titan at individual
     inventories (narrow blue) and yealy sum totals for 2014 and later
-    (wide gray). High swap volumes prior to 2014 reflect two major
-    rework cycles on mechanical assembly issues at PCIe connectors
-    that can be characterized as a break-in period. Our analysis in
-    this paper excludes the break-in period and is focused on units in
-    place by 2014 or swapped in during the years that follow.} 
+    (wide gray) over its entire lifetime. High swap volumes prior to
+    2014 reflect two major rework cycles on mechanical assembly issues
+    at PCIe connectors that can be characterized as a break-in
+    period. Our analysis in this paper excludes the break-in period
+    and is focused on units in place by the end of 2013 or swapped in
+    during the years that follow.}
   \label{fig:chronology}
 \end{figure*}
 Figure~\ref{fig:chronology} illustrates the chronology of the rework
 cycles and stable periods as indicated by the number of GPU changes at
-periodic inventories.  The first two rework cycles before 2014
+periodic inventories. The first two rework cycles before 2014
 involving blade mechanical assembly can be characterized as a break-in
 period on a new system that is first of its kind and pushes many
 technological boundaries. The resulting field engineering as well as
