--- a/refs.bib
+++ b/refs.bib
@@ -359,3 +359,41 @@
   month         = feb # "23, ",
   url           = "https://spectrum.ieee.org/computing/hardware/how-to-kill-a-supercomputer-dirty-power-cosmic-rays-and-bad-solder"
 }
+
+@Manual{survival-package,
+    title = {A Package for Survival Analysis in R},
+    author = {Terry M Therneau},
+    year = {2020},
+    note = {R package version 3.1-12},
+    url = {https://CRAN.R-project.org/package=survival},
+}
+
+@Book{survival-book,
+    title = {Modeling Survival Data: Extending the {C}ox Model},
+    author = {{Terry M. Therneau} and {Patricia M. Grambsch}},
+    year = {2000},
+    publisher = {Springer},
+    address = {New York},
+    isbn = {0-387-98784-3},
+}
+
+@article{kaplan-meier1958,
+ ISSN = {01621459},
+ author = {E. L. Kaplan and Paul Meier},
+ journal = {Journal of the American Statistical Association},
+ number = {282},
+ pages = {457--481},
+ publisher = {[American Statistical Association, Taylor & Francis, Ltd.]},
+ title = {Nonparametric Estimation from Incomplete Observations},
+ volume = {53},
+ year = {1958}
+}
+
+@Manual{survminer-package,
+    title = {Drawing Survival Curves using 'ggplot2'},
+    author = {Alboukadel Kassambara and Marcin Kosinski and
+                  Przemyslaw Biecek},
+    year = {2019},
+    note = {R package version 0.4.6},
+    url = {https://CRAN.R-project.org/package=survminer},
+}
