--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -30,27 +30,31 @@ III.
 - What conclusions should one draw from the inter-inventory time shown
   in Fig. 2? I assume there are different reasons for system boots,
   so, I’m not clear how to interpret this graph.
-  * *George: Reader should get "big picture chronology" framing events
-    and data used in this study. Also informs complexities of running
-    a leadership class supercomputer* 
+  * *George: had event dates mixed in before. Now without shows 56
+    day gap and reason for weekly inventory.* 
 - Why would you record inventory independently of system boots? I
   assume inventory can only change after a system boot.
   * *Don: system boots can be far apart while blades with GPUs can be
-    hot-swapped?*
+    hot-swapped?* 
+	*Also, see above comment.* 
 
 V.
 - Shouldn’t graphs be separated for the two batches (pre/post the 2017
   replacement)? As you report, failure characteristics look different
   with the post 2017 batch being more reliable. For example, don’t the
   MTBFs in Fig. 7 look different for the two batches?
+  * *Rizwan: split old-new and make MTBF unit years*
 - With respect to failure events, what triggers the retirement or end
   of life of a GPU?
+  * *Don: why is OTB or DBE end of life?*
 - Fig. 10: How big are the partitions with old and new GPUs,
   respectively?
+  * *Rizwan: add info to graph*
 
 VI.
 - Can you please add references for all analysis methods mentioned in
   this section, e.g. for Kaplan-Meier?
+  * *George: started this task. More is needed.*
 - Can you please explicitly label nodes 0-3 and slots 0-7 in Fig. 4 to
   make it easier for the reader to interpret location-dependent
   results.
