--- a/dataprep.tex
+++ b/dataprep.tex
@@ -76,8 +76,8 @@ Figure~\ref{fig:layout}.
     single blade layout (bottom left) and floor layout (bottom
     right). Cooling airflow is bottom to top within a cabinet, taking
     ambient air in mostly at the foot and relasing it back out at the
-    top. Cooling fluid is passed through two heat exchange
-    evaporators, one below Cage 0 and one above Cage 2.}
+    top. Cooling fluid is passed through heat exchange
+    evaporators, below Cage 0 and above Cage 2.}
   \label{fig:layout}
 \end{figure}
 
