--- a/dataprep.tex
+++ b/dataprep.tex
@@ -24,13 +24,13 @@ inter-inventory times that appear in the data.
   \end{center}
   \caption{Inter-inventory times, taken as time intervals between
     unique dates in the data and removing those less than a day. Note
-    square root scale on the vertical axis and missing days for 15,
-    17, 19, and 22-55.}
+    square root scale on the vertical axis.}
   \label{fig:inventory}
 \end{figure}
-Notably, there was a period of over a month and many periods of over a
-week that Titan operated without a single reboot, especially in the
-2014-2015 time frame.
+Notably, there was a period of nearly two months and many periods of over a
+week that Titan operated without a single reboot in the
+2014-2015 time frame. By the time the weekly inventories were added,
+failure rates started to increase and lead to more frequent reboots.
 
 Initial processing updates an inventory by checking the Serial Number
 (SN) and Location of each GPU and creating or updating a separate
