--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -58,24 +58,32 @@ VI.
 - Can you please explicitly label nodes 0-3 and slots 0-7 in Fig. 4 to
   make it easier for the reader to interpret location-dependent
   results.
+  * *George: Done*
 - Fig. 12/13: I assume the figures show the mean and std (or median,
   Q1, Q3)?
+  * *George*
 - There is a reference missing on page 9 [?].
+  * *George*
 - Typo: “has mot” -> “has not”
+  * *George: Done*
 
 VII.
 - Can you quantify how changing job scheduling improved productivity?
+  * *Christian: is there a paper reference about this?*
 - Is there any data available on the reliability of other system
   components (CPUs, DRAM, interconnect, etc.)?
+  * *Don: ?*
 
 
 ## Comments for Revision
 
 - I suggest showing separate graphs for the old and new GPU batches,
   e.g. in Fig. 2 and Fig. 7. 
+  * *Not relevant to Fig 2. Rizwan: Fig 7*
 - Your data shows a clear correlation between reliability and
   location. Do you have location-specific operating conditions and
-  environmental data available to strengthen this point? 
+  environmental data available to strengthen this point?
+  * *Anyone? I had a conversation with Scott Atchley*
 
 # Reviewer 2
 
