--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -101,41 +101,50 @@ authors drew particular conclusions in this paper.
 - Section 3: are DBE and OTB the only failures events logged? Are
   there no other failure modes of relevance oradditional conditions
   that may have triggered a replacement?
+  * *Don?*
 - Fig. 2: a square root scale is hard to parse and having the lowest
   y-axis mark at 500 isn't particularly useful. It would help to add
   further tick marks.
+  * *George: Done*
 - Fig. 2: based on the text, the weekly inventory condition should
   appear on this graph for later years; however, this does not appear
   to be the case (i.e., around the 7 day mark, only years before 2015
   seem to appear). If system boots were rare in the latter years,
   which necessitated this weekly inventory, the chart is not
   reflecting this reality. It would be helpful to clarify.
+  * *George: Calrified. Don: review!*
 - Section 4: it would be helpful to explain the reason for overlapping
   logs (GPU life and location). Is this due to some logging
   peculiarity?
+  * *Don?*
 - Section 6: how was the conclusion that GPU lifetimes were
   correlating to the cooling architecture reached? Was this validated
   against some other logs (e.g., temperature or chiller performance
   logs)?
+  * *George: Improved Figure 4. Don: Are there other data? Airflow
+    from Jaguar. Copyright?*
 - It would be helpful to correlate lifetime data against any
   utilization or scheduler logs as well. It is unclear if GPU
   utilization was uniform (which the text seems to indicate was not
   the case due to the adaptive scheduler). Unexpected job
   scheduling/mapping could also contribute to peculiarities in the
   data. It would be helpful to rule out this scenario as an effect.
+  * *We taled about direction of scheduling. Should we mention it?*
 - While overall readability was not substantially impacted, it would
   be helpful to address the various minor grammatical issues (mostly
   centered around the first 2-3 pages).
+  * *George: Some done and continuing.*
 
 
 ## Comments for Revision
 
-The main revision that should be made is additional discussion
-regarding how the conclusion that system cooling was having a large
-impact on GPU lifetime was being reached. While plausible, further
-validation or confirmation via additional logs or analysis would be
-helpful. Additionally, it would be helpful to rule out other
-contributing factors such as poor scheduling or utilization.
+- The main revision that should be made is additional discussion
+  regarding how the conclusion that system cooling was having a large
+  impact on GPU lifetime was being reached. While plausible, further
+  validation or confirmation via additional logs or analysis would be
+  helpful. Additionally, it would be helpful to rule out other
+  contributing factors such as poor scheduling or utilization.
+  * *Addressed above?*
 
 # Reviewer 3
 
