--- a/intro.tex
+++ b/intro.tex
@@ -25,8 +25,7 @@ and contains the most reliable data on GPU operation.
 \begin{figure*}[tb]
   \centering
   \includegraphics[width=\textwidth]{figs/chronology001.pdf}
-  \caption{A seven-year tale of GPU life on a leadership class
-    supercomputer: Volume of GPU swaps detected on Titan at individual
+  \caption{Volume of GPU swaps detected on Titan at individual
     inventories (narrow blue) and yealy sum totals for 2014 and later
     (wide gray) over its entire lifetime. High swap volumes prior to
     2014 reflect two major rework cycles on mechanical assembly issues
