--- a/dataprep.tex
+++ b/dataprep.tex
@@ -23,8 +23,7 @@ inter-inventory times that appear in the data.
     \includegraphics[width=\columnwidth]{figs/attention_intervals001.pdf}
   \end{center}
   \caption{Inter-inventory times, taken as time intervals between
-    unique dates in the data and removing those less than a day. Note
-    square root scale on the vertical axis.}
+    unique dates in the data and removing those less than a day.}
   \label{fig:inventory}
 \end{figure}
 Notably, there was a period of nearly two months and many periods of over a
@@ -38,7 +37,7 @@ record for each contiguously observed SN-Location
 combination. Resulting GPU data records are of the form shown in
 Fig.~\ref{fig:dataraw},
 \begin{figure}[tb]
-{\tiny
+{\notsotiny\bf
 \begin{verbatim}
 0323812007945 | c17-4c1s3n1 | 01/10/2013 02:54:45 | 02/02/2013 11:32:29
  | c13-1c1s3n3 | 01/21/2014 21:10:42 | 08/01/2017 02:15:02
