--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -1,3 +1,5 @@
+  * *Christian: makefile mod for pandoc?*
+
 # Reviewer 1
 
 ## Detailed Comments for Authors
@@ -12,6 +14,7 @@ I.
   responsible for GPU swaps? 
   * *Don: can you elaborate on data collection prior to 2014?
     ... especially regarding the full machine spike.*
+	*May 2013 acceptance?*
 - Rephrase the sentence: “TBF studies largely how…” -> “TBF studies
   largely show how…”
   * *George: Done*
@@ -23,15 +26,25 @@ II.
 III.
 - You should explain in more detail the “double bit error” and “off
   the bus” failure events. 
-  * *Don?*
+  * *Don? GDDR5, #pcie lanes available to card. pcie2!=8 (4, 2)*
 - What are the causes for “system boots”? I assume it’s not just event
   failures.
-  * *Don?*
+  * *Don? We rebooted as often as weekly to do software updates
+    patches etc.*
 - What conclusions should one draw from the inter-inventory time shown
   in Fig. 2? I assume there are different reasons for system boots,
   so, I’m not clear how to interpret this graph.
-  * *George: had event dates mixed in before. Now without shows 56
-    day gap and reason for weekly inventory.* 
+  * *George: had event dates mixed in before. Also stacking a
+    histogram uner a y axis transform is a "bug" in ggplot2.*
+	*I expected remove dates to reveal inventory frequency but this
+    does not work. Why?*
+	*If a reboot takes about a minute, all insert and remove time
+    stamps should be withi a minute interval. But this is not the case.*
+  
+	*Warm swaps*
+	*Toward the end - daily inventories*
+	*2017 - started daily inventories*
+	*check sqrt axis???*
 - Why would you record inventory independently of system boots? I
   assume inventory can only change after a system boot.
   * *Don: system boots can be far apart while blades with GPUs can be
@@ -47,6 +60,8 @@ V.
 - With respect to failure events, what triggers the retirement or end
   of life of a GPU?
   * *Don: why is OTB or DBE end of life?*
+  * *First: DBE not end. Losing memory pages 64? Eventually figured
+     that OTB and DBE would not go away*
 - Fig. 10: How big are the partitions with old and new GPUs,
   respectively?
   * *Rizwan: add info to graph*
@@ -72,7 +87,8 @@ VII.
   * *Christian: is there a paper reference about this?*
 - Is there any data available on the reliability of other system
   components (CPUs, DRAM, interconnect, etc.)?
-  * *Don: ?*
+  * *Don: ? Failure rates external to SXM module followed expected
+    MTTF etc.*
 
 
 ## Comments for Revision
@@ -83,7 +99,8 @@ VII.
 - Your data shows a clear correlation between reliability and
   location. Do you have location-specific operating conditions and
   environmental data available to strengthen this point?
-  * *Anyone? I had a conversation with Scott Atchley*
+  * *See Reviewer 2 Utilization*
+   *See papers by Devesh and by Zimmer.*
 
 # Reviewer 2
 
@@ -101,40 +118,43 @@ authors drew particular conclusions in this paper.
 - Section 3: are DBE and OTB the only failures events logged? Are
   there no other failure modes of relevance oradditional conditions
   that may have triggered a replacement?
-  * *Don?*
+  * *Don: Other failures were much less frequent and were not
+    correlated with the failing resistor issue, which was the driving
+    cause of GPU board replacement.*
 - Fig. 2: a square root scale is hard to parse and having the lowest
   y-axis mark at 500 isn't particularly useful. It would help to add
   further tick marks.
-  * *George: Done*
+  * *George: See Reviewer 1 on Fig 2*
 - Fig. 2: based on the text, the weekly inventory condition should
   appear on this graph for later years; however, this does not appear
   to be the case (i.e., around the 7 day mark, only years before 2015
   seem to appear). If system boots were rare in the latter years,
   which necessitated this weekly inventory, the chart is not
   reflecting this reality. It would be helpful to clarify.
-  * *George: Calrified. Don: review!*
+  * *George: See Reviewer 1 on Fig 2*
 - Section 4: it would be helpful to explain the reason for overlapping
   logs (GPU life and location). Is this due to some logging
   peculiarity?
-  * *Don?*
+  * *George: See Reviewer 1 on Fig 2*
 - Section 6: how was the conclusion that GPU lifetimes were
   correlating to the cooling architecture reached? Was this validated
   against some other logs (e.g., temperature or chiller performance
   logs)?
-  * *George: Improved Figure 4. Don: Are there other data? Airflow
-    from Jaguar. Copyright?*
+  * *George: Improved Figure 4.*
+  *See papers by Devesh and by Zimmer.*
 - It would be helpful to correlate lifetime data against any
   utilization or scheduler logs as well. It is unclear if GPU
   utilization was uniform (which the text seems to indicate was not
   the case due to the adaptive scheduler). Unexpected job
   scheduling/mapping could also contribute to peculiarities in the
   data. It would be helpful to rule out this scenario as an effect.
-  * *We taled about direction of scheduling. Should we mention it?*
+  * *Utilization:*
+  *Interleaving hazard values correlate with small job scheduling fill and
+  toroidal folding. George: Get the details to work out.*
 - While overall readability was not substantially impacted, it would
   be helpful to address the various minor grammatical issues (mostly
   centered around the first 2-3 pages).
   * *George: Some done and continuing.*
-
 
 ## Comments for Revision
 
@@ -144,7 +164,7 @@ authors drew particular conclusions in this paper.
   validation or confirmation via additional logs or analysis would be
   helpful. Additionally, it would be helpful to rule out other
   contributing factors such as poor scheduling or utilization.
-  * *Addressed above?*
+  * *See Utilization above*
 
 # Reviewer 3
 
@@ -191,6 +211,8 @@ authors drew particular conclusions in this paper.
   Operations team and the vendors. Same thing with the 0-10 column
   zig-zag pattern. Any data from internal counters that would be
   useful to discard or confirm hypothesis?
+  * *George: follow up zig-zag with toroidal foldover*
+    *See if it persists for subsets of year or subsets of cages.*
 
 ### Figures: 
 
@@ -203,19 +225,22 @@ clarifications. See suggestions below:
 - New: It would be useful to have a figure similar to Fig. 1 but with
   the cumulative data per year for the whole 7 years of life to see
   total and annual number of units replaced. A table would also work.
-  *  *We modified the figure to accomplish both of the above. The ealy
+  *  *Modified the figure to accomplish both of the above. The ealy
      tall bar with 18K: is it an artifact or did all the GPU move?*
 - Figure 3: The text in Fig. 3 is really too small. At least, I
   suggest trying to use the entire width of the column.
+  * *George: fixed*
 - Figure 3: Would it be useful to include the time zone while talking
   about this figure -mainly to know if the raw data always pertain to
   the same time zone or if they change as mentioned in section IV.
+  * *Don: are all times ET and change for daylight time (EST-EDT)?*
 - Figure 4: I would personally add one of the sequences
   (e.g. c17-4c1s3n1) in the white space in the middle-right part of
   the image with red arrows pointing from the exact location of the
   component in the different sections (columns, rows, etc.) to the
   corresponding images. That would help make the connection with the 4
   images and raw data described in that section.
+  * *George: ?*
 - Figure 5: Despite the fact that data are random, I would order the
   Y-axis based on location (c0-c24)
 - Figures 5 and 6: Since the article has room, I would expand a little
@@ -225,6 +250,8 @@ clarifications. See suggestions below:
   number? E.g. for location, 80 corresponds to 1/X of the total, or
   something like that? Just a way to guide the user who would like to
   apply this visualization to their own data.
+  * *We missed correcting the 80 in the text as we tried to float the
+    figure to the right place.*
 - Figures 5 and 6: There are lines that do not finish with ], OTB or
   DBE events. They just end. Example: 0323812005773 in fig. 5. Is that
   because they were part of another board in which something went
