--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -240,7 +240,7 @@ clarifications. See suggestions below:
   component in the different sections (columns, rows, etc.) to the
   corresponding images. That would help make the connection with the 4
   images and raw data described in that section.
-  * *George: ?*
+  * *George: Done*
 - Figure 5: Despite the fact that data are random, I would order the
   Y-axis based on location (c0-c24)
 - Figures 5 and 6: Since the article has room, I would expand a little
